--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,15 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
 debugpy==1.8.2
 decorator==5.1.1
 defusedxml==0.7.1
 executing==2.0.1
 fastjsonschema==2.20.0
 Flask==3.0.3
+fonttools==4.53.1
 fqdn==1.5.1
 h11==0.14.0
 httpcore==1.0.5
@@ -50,7 +53,9 @@ jupyterlab==4.2.4
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.11
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
+matplotlib==3.9.1
 matplotlib-inline==0.1.7
 mistune==3.0.2
 nbclient==0.10.0
@@ -65,6 +70,7 @@ packaging==24.1
 pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.4
+pillow==10.4.0
 platformdirs==4.2.2
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
@@ -72,6 +78,7 @@ psutil==6.0.0
 pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.18.0
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.1
